--- a/djtalk/users/templates/list.html
+++ b/djtalk/users/templates/list.html
@@ -10,17 +10,26 @@
             {% endif %}
         {% endfor %}
     </ul>
-
-    <form action="/users/add">
+    {% if has_error %}
+        <p style="color: red">
+            {{ field }}: {{ error }}
+        </p>
+    {% endif %}
+    <form action="">
         First name:
         <br>
-        <input type="text" name="firstname" value="Mickey">
+        {% if field == 'firstname' %}
+            <input type="text" name="firstname" value="Mickey" style="border-color:red">
+        {% else %}
+            <input type="text" name="firstname" value="Mickey" >
+        {% endif %}
+        
         <br>
         Last name:
         <br>
         <input type="text" name="lastname" value="Mouse">
         <br><br>
-        <input type="number" name="grade" min=0 max=20 step=0.1>
+        <input type="text" name="grade" min=0 max=20 step=0.1>
         <br>
         <input type="submit" value="Add user">
     </form> 
