Before starting group

--- a/djtalk/message/templates/chat.html
+++ b/djtalk/message/templates/chat.html
@@ -30,13 +30,7 @@
             <ul>
                 {% for message in messages %}
                 <li>
-                    {% for id, name in users_names.items %}
-                        {% if message.sender == id %}
-                            {{ name }}: {{ message.text }}
-                        {% endif %}
-
-                    {% endfor %}
-                    
+                    {{ message.sender.get_full_name }} ( {{ message.sender.username }} ): {{ message.text }}
                 </li>
                 {% endfor %}
             </ul>
